updated documentation + icon

--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -1,16 +1,16 @@
 TODOs
 
-* Git
-* Release Mgmt
-* Icon
-
-
 ==
 
 * Tests
 
 
 Ideas
+* Market
+* Real sync (no del + write)
 * Combine username@host:port for account name
-* Limit returned attributes for memory!
-* Think about edit variables
+* Limit returned attributes for memory consumption!
+* Think about edit variables (Remove?)
+* SSL support
+* Layout of input fields! (Grouping, Menubar)
+* Include only relevant LDAP parts of the library => smaller size!
