--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -3,22 +3,24 @@ TODOs
 ==
 
 * Tests
-* Market
+* Create Homepage with help (http://www.danielweisser.de/ldapsync)
 
 Ideas
+* Anonymous access to LDAP server
+* Handle multiple mail addresses
+* Add location
 * Real sync (no del + write)
-* Combine username@host:port for account name
-* Think about edit variables (Remove?)
 * SSL support
-* Layout of input fields! (Grouping, Menubar)
-* Include only relevant LDAP parts of the library => smaller size!
 * Better error handling
-* Auto detection of attribute names
+* Combine username@host:port for account name
+* Include only relevant LDAP parts of the library => smaller size!
+* Auto detection of attribute names based on server type (http://ldapwiki.willeke.com/wiki/Determine%20LDAP%20Server%20Vendor)
+
 
 Changelog
 
 1.0 (not released yet)
-* 
+* Smaller UI improvements for the configuration dialog
 
 0.9
 * Performance Improvements (Only relevant LDAP attributes are queried)
