--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,8 +7,8 @@
 	<skip />
 	<string name="login_activity_host_label">Host</string>
 	<string name="login_activity_port_label">Port</string>
-	<string name="login_activity_username_label">Username</string>
-	<string name="login_activity_password_label">Password</string>
+	<string name="login_activity_username_label">Bind DN (Leave empty for anonymous)</string>
+	<string name="login_activity_password_label">Bind Password (Leave empty for anonymous)</string>
 	<string name="login_activity_basedn_label">BaseDN</string>
 	<string name="login_activity_searchfilter_label">Search Filter</string>
 	<string name="login_activity_ldap_mappings_label">LDAP Mappings</string>
@@ -24,7 +24,6 @@
 	<!-- Message shown in dialog if the username or password is invalid. -->
 	<string name="login_activity_loginfail">The username or password isn\'t valid. A LDAP
 		account is required. Please try again. </string>
-	<string name="login_activity_newaccount_text">Sign in to your LDAP account.</string>
 	<!--
 		Message shown in progress dialog while app connects to the server
 	-->
