--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -10,6 +10,8 @@ Apart from app
 * Check with OpenLDAP server
 
 Ideas
+* Fix lock: http://developer.android.com/reference/android/provider/ContactsContract.Data.html (withYieldAllowed)
+  http://developer.android.com/resources/samples/SampleSyncAdapter/src/com/example/android/samplesync/platform/ContactOperations.html
 * Auto detection of attribute names based on server type/used scheme (http://ldapwiki.willeke.com/wiki/Determine%20LDAP%20Server%20Vendor) + http://www.zytrax.com/books/ldap/ape/
 * Additional fields (location) => http://www.zytrax.com/books/ldap/ape/
 * View facets (private contacts, ...) ==> Display options!
