--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -16,7 +16,7 @@ Ideas
 
 Changelog
 1.4.1
-* Fix for a possible NullPointer
+* Fix for a possible NullPointerException
 * Bugfix for concurrently running sync adapters
 
 1.4
