Added licensing terms (Apache License 2.0)

--- a/README
+++ b/README
@@ -1,4 +1,7 @@
 A LDAP Sync adapter for Android 
-http://www.danielweisser.de/blog
 
-https://github.com/weisserd/LDAP-Sync
+The homepage can be found at http://www.danielweisser.de/blog
+
+The source is hosted at https://github.com/weisserd/LDAP-Sync
+
+This project is licensed under the Apache License v2.0.
