--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -1,4 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+ Copyright 2010 Daniel Weisser
+
+ Licensed under the Apache License, Version 2.0 (the "License");
+ you may not use this file except in compliance with the License.
+ You may obtain a copy of the License at
+
+      http://www.apache.org/licenses/LICENSE-2.0
+
+ Unless required by applicable law or agreed to in writing, software
+ distributed under the License is distributed on an "AS IS" BASIS,
+ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ See the License for the specific language governing permissions and
+ limitations under the License.
+ -->
+ 
 <resources>
 	<string name="label">LDAP</string>
 	<string name="app_name">LDAP Sync</string>
@@ -10,8 +26,7 @@
 	<string name="login_activity_encryption_label">Verschlüsselung</string>
 	<string name="login_activity_encryption_prompt">Wählen Sie die gewünschte Verschlüsselung</string>
 	<string name="login_activity_username_label">Bind DN (Leer für anonymen Zugang)</string>
-	<string name="login_activity_password_label">Bind Passwort (Leer für anonymen Zugang)
-	</string>
+	<string name="login_activity_password_label">Bind Passwort (Leer für anonymen Zugang)</string>
 	<string name="login_activity_basedn_label">BaseDN</string>
 	<string name="login_activity_searchfilter_label">Suchfilter</string>
 	<string name="login_activity_ldap_mappings_label">LDAP Zuordnungen</string>
