Change port to 636 if SSL is selected - https://github.com/weisserd/LDAP-Sync/issues/5

--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,7 @@
 * Added correct licensing terms (Apache License 2.0)
 * Removed the trace handler
 * Upgraded LDAP library to version 2.2.0 (smaller memory footprint - by 500kB)
+* If SSL is selected change port to 636 - https://github.com/weisserd/LDAP-Sync/issues/5
 
 1.4.2
 * Bugfixes (Possible Memory Leaks, AutoCompletion of BaseDNs, Photo handling) 
