Initial support of preferences

--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -3,7 +3,8 @@ TODOs:
 * Newer LDAP library (smaller memory footprint) => replace with ME edition
 * more tests (improved quality) => Open Source Tests
 * Bug fixes (fix all remaining bugs, e.g. incoming call when creating account, ...)
-* Imroved Network/Failure handling (from XING-Sync)
+* Improved Network/Failure handling (from XING-Sync)
 * Auto detection of attribute names based on server type/used scheme (http://ldapwiki.willeke.com/wiki/Determine%20LDAP%20Server%20Vendor) + http://www.zytrax.com/books/ldap/ape/
 * Create Homepage with help (http://www.danielweisser.de/ldapsync)
 * Multiple accounts on one server!
+* Do not log forever!
