--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,7 @@
 * Updated LDAP library (2.3.1)
 * Upgraded minimum Android version to 2.1
 * Use new Android styles (compatible with newer devices - Android 4.1)
+* Multiple accounts are now supported (even against one server)
 * Changed the build infrastracture to Maven (better management of builds)
 
 1.5
