--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,5 +59,6 @@
     <string name="ui_activity_title">LDAP Server settings</string>
     <string name="defaultLdapPort">389</string>
     <string name="done">Done</string>
+    <string name="action_save">Save</string>
 
 </resources>
