--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
  Copyright 2010 Daniel Weisser
  Copyright 2018 Mira Weller
 
@@ -54,7 +53,7 @@
     <!-- Message shown in dialog if the username or password is invalid. -->
     <string name="login_activity_loginfail">The username or password isn\'t valid. A LDAP
 		account is required. Please try again. </string>
-<!-- 		Message shown in progress dialog while app connects to the server -->
+    <!-- 		Message shown in progress dialog while app connects to the server -->
     <string name="ui_activity_authenticating">Authenticating\u2026</string>
 
     <!-- Title string for Login activity -->
@@ -65,5 +64,8 @@
     <string name="email_error_report">Send Error Report</string>
     <string name="add_account">Add account</string>
     <string name="add_account_from_qr">Add via QR code</string>
+    <string name="title_activity_settings">Settings</string>
+    <string name="settings">Settings</string>
+
 
 </resources>
