--- a/README
+++ b/README
@@ -1,7 +1,3 @@
 A LDAP Sync adapter for Android 
 
-The homepage can be found at http://www.danielweisser.de/blog
-
-The source is hosted at https://github.com/weisserd/LDAP-Sync
-
-This project is licensed under the Apache License v2.0.
+The repo is now read-only, as it is just to old and unmaintained.
